--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 include: [".well-known"]
 remote_theme: OpenCommonSense/OpenCommonSense
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://commonsense.run" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 color_scheme: light
 logo: "/assets/logo.jpg"
