--- a/_config_local.yml
+++ b/_config_local.yml
@@ -6,6 +6,5 @@ include: [".well-known"]
 theme: "just-the-docs"
 # remote_theme: pmarsceill/just-the-docs
 
-repo_name: OpenCommonSense
 color_scheme: light
-logo: "/assets/logo.jpg"
+logo: "ocs_logo.png"
