--- a/_config_local.yml
+++ b/_config_local.yml
@@ -5,6 +5,15 @@ include: [".well-known"]
 # Theme
 theme: "just-the-docs"
 # remote_theme: pmarsceill/just-the-docs
-
 color_scheme: light
 logo: "https://commonsense.run/ocs_logo.png"
+
+title: Commonsense.Run - Portal Site for Commonsense Reasoning
+email: yuchen.lin@usc.edu
+description: >- # this means to ignore newlines until "baseurl:"
+  An online compendium of commonsense knowledge & reasoning, maintained by Bill Yuchen Lin. 
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://commonsense.run" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: OpenCommonSense
+github_username:  yuchenlin
+
