--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ include: [".well-known"]
 remote_theme: pmarsceill/just-the-docs
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-color_scheme: light
+color_scheme: blue
 
 
 # Changes
