--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ github_username:  yuchenlin
 # appears at the bottom of every page's main content
 
 # Back to top link
-back_to_top: true
+back_to_top: false
 back_to_top_text: "Back to top"
 
 # Footer last edited timestamp
