--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ github_username:  yuchenlin
 # appears at the bottom of every page's main content
 
 # Back to top link
-back_to_top: false
-back_to_top_text: "Back to top"
+back_to_top: true
+back_to_top_text: " "
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
