add google tracking

--- a/_config.yml
+++ b/_config.yml
@@ -35,3 +35,5 @@ gh_edit_repository: "https://github.com/OpenCommonSense/CommonSensePortalSite" #
 gh_edit_branch: "master" # the branch that your docs is served from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
+ga_tracking: UA-196387695-1
+ga_tracking_anonymize_ip: false
